# PlexPass

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  diesel.toml
assets/css/: dark-theme.css  default.css  light-theme.css
assets/javascript/: form.js  plexpass.js
config/: cert-pass.pem  key-pass.pem
docs/: plexpass.drawio  usage.txt
functional_tests/: 00_docker_start_server.sh  00_local_start_server.sh  01_user_tests.py  02_vault_tests.py  03_account_test.py  04_password_test.py  05_encryption_test.py  06_import_export_test.py  07_share_vault_test.py  08_category_test.py  09_audit_logs_test.py  101_user_signup_command.sh  102_user_signin_command.sh  103_user_get_command.sh  104_user_update_command.sh  105_user_delete_command.sh  106_vault_create_command.sh  107_vault_all_command.sh  108_vault_get_command.sh  109_vault_update_command.sh  10_otp_test.py  110_vault_delete_command.sh  111_account_create_command.sh  112_account_all_command.sh  113_account_get_command.sh  114_account_update_command.sh  115_account_delete_command.sh  116_category_create_command.sh  117_category_get_command.sh  118_category_delete_command.sh  119_encryption_generate_keys_command.sh  11_reset_mfa_test.py  120_encryption_asymmetric_command.sh  121_encryption_symmetric_command.sh  122_import_accounts_command.sh  123_password_generate_command.sh  124_password_compromised_command.sh  125_password_strength_command.sh  126_email_compromised_command.sh  127_analyze_vault_password_command.sh  (+78 more)
migrations/2023-09-02-011758_users/: up.sql
migrations/2023-09-03-211658_crypto_keys/: down.sql  up.sql
migrations/2023-09-21-155917_vaults/: down.sql  up.sql
migrations/2023-09-21-155918_accounts/: down.sql  up.sql
migrations/2023-09-21-155923_lookup/: down.sql  up.sql
migrations/2023-09-21-155931_settings/: down.sql  up.sql
src/: auth.rs  background.rs  command.rs  controller.rs  crypto.rs  csv.rs  dao.rs  domain.rs  hibp.rs  lib.rs  locales.rs  main.rs  manager.rs  service.rs  store.rs  utils.rs
src/auth/: handlers.rs  (+3 more)
templates/: accounts_table.html  audit_logs.html  authenticated_base.html  base.html  categories.html  dashboard.html  generate_password.html  index.html  mfa_recover.html  mfa_signin.html  password_tools.html  signin.html  signup.html  sub_nav.html  unauth_base.html  user_profile.html
(+126 files in other folders)
