[package]
name = "plexpass"
version = "0.5.0"
authors = ["bhatti"]
edition = "2021"

[dependencies]
rand = "0.8"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
futures = "0.3"
dashmap = "5.5"
tokio = { version = "1", features = ["full"] }
argon2 = "0.5.2"
sha-1 = "0.10"
sha2 = "0.10"
ring = "0.17"
hex = "0.4.3"
reqwest = "0.11"
regex = "1"
strsim = "0.10"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
rustls = "0.21"
rustls-pemfile = "1"
actix-web = { version = "4.4", features = ["rustls-0_21", "openssl"] }
actix-web-lab= { version = "0.19", features = [] }
actix-service = "2.0"
actix-rt = "2.9"
actix-session = { version = "0.8", features = ["cookie-session"] }
actix-files = { version = "0.6" }
actix-cors = "0.6"
actix-multipart = "0.6"
askama = "0.12"
time = "0.3"
ipnetwork = "0.20"
fluent = "0.16"
fluent-resmgr = "0.0.6"
fluent-langneg = "0.13"
unic-langid = "0.9"
openssl = { version = "0.10" }
otpauth = "0.4"
# both rqrr and qrcode are similar
rqrr = "0.6"
qrcode = "0.12"
image = "0.23"
csv = "1.3"
byteorder = "1.5"
jsonwebtoken = "8.3.0"
base64 = "0.21"
base32 = "0.4"
urlencoding = "2.1"
failure = "0.1.8"
utoipa = { version = "3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "4", features = ["actix-web"] }
once_cell = "^1.18.0"
ecies = {version = "0.2", features = []}
url = "2.4"
anyhow = { version = "~1.0" }
webauthn-rs = { version = "0.4", features = ["danger-allow-state-serialisation"] }

prometheus = "0.13"
actix-web-prom = "0.7"

diesel = { version = "2.1.0", features = ["sqlite", "chrono", "serde_json", "r2d2"] }
diesel_migrations = "2.1.0"
r2d2 = "*"
r2d2-diesel = "*"
dotenv = "0.15"
env_logger = "0.9"
log = "0.4"
itertools = "0.11"

# Data serialization library
serde = { version = "1.0.110", features = ["derive"] }
# Other utilities
chrono = { version = "0.4.11", features = ["serde"] }
serde_json = "1.0"
async-trait = "0.1.57"
async-recursion = "1.0.0"
cfg-if = "1.0.0"
clap = { version = "4.0.8", features = ["derive"] }
serde_yaml = "0.9.13"
gethostname = "0.2.3"
lazy_static = "1.4.0"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.9.2"
[dev-dependencies]

[build-dependencies]
chrono = "0.4.11"

